Fix border-top color to meet 3:1 contrast ratio

--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -397,7 +397,7 @@ $stacking-order: (
     background-color: var(--p-surface);
     position: absolute;
     border: 1px solid var(--p-border-subdued);
-    border-top-color: var(--p-border-shadow);
+    border-top-color: #8c959b;
     box-shadow: none;
 
     &::after {
